<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:background="@drawable/background"

    >


    <EditText
        android:id="@+id/seconds"
        android:layout_width="116dp"
        android:layout_height="113dp"
        android:autofillHints="Seconds passed to timer"
        android:background="@drawable/time_border"
        android:ems="10"
        android:hint="@string/_00"
        android:inputType="numberSigned"
        android:labelFor="@id/seconds"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <EditText
        android:id="@+id/minutes"
        android:layout_width="116dp"
        android:layout_height="113dp"
        android:autofillHints="Minutes passed to timer"
        android:background="@drawable/time_border"
        android:ems="10"
        android:hint="@string/_00"
        android:inputType="numberSigned"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/minutes_text"
        android:layout_width="117dp"
        android:layout_height="33dp"
        android:layout_marginTop="83dp"
        android:layout_marginBottom="16dp"
        android:text="@string/minutes"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="@+id/minutes"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/seconds_text"
        android:layout_width="121dp"
        android:layout_height="37dp"
        android:layout_marginTop="83dp"
        android:text="@string/seconds"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/seconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/seconds"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bluetooth_button"
        android:layout_width="145dp"
        android:layout_height="55dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/bluetooth_connect"
        android:textSize="15sp"
        android:theme="@style/button1"
        app:icon="@android:drawable/stat_sys_data_bluetooth"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/stop_counter"
        android:textSize="15sp"
        android:theme="@style/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/send_time_button"
        android:layout_width="265dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/send_time"
        android:textSize="30sp"
        android:theme="@style/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="37dp"
        android:layout_height="113dp"
        android:text="@string/colon"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorLink="#000000"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <ImageButton
        android:id="@+id/led6"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led6_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <ImageButton
        android:id="@+id/led8"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led8_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <ImageButton
        android:id="@+id/led2"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led2_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <ImageButton
        android:id="@+id/led4"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led4_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <ImageButton
        android:id="@+id/led1"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led1_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <ImageButton
        android:id="@+id/led3"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led3_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <ImageButton
        android:id="@+id/led7"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led7_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <ImageButton
        android:id="@+id/led5"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:background="@drawable/led"
        android:contentDescription="@string/led5_button_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_auto_flag"
        android:layout_width="250dp"
        android:layout_height="61dp"
        android:background="@drawable/time_border"
        android:text="@string/auto_led_mode"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>